@@ -2,7 +2,9 @@ Changelog for GEMC
 ==================
 
 10/30/17
- - fixed mismatch typo for internal generator 
+ - fixed mismatch typo for internal generator
+ - preferred directions on field is "z". Added else to skip cases in expensive method GetFieldValue
+ - fixed bug in dipole field calculation: the transverse coordinate was not computed correctly in some cases.
 
 10/23/17
  - added mfield attribute for CAD volumes in cad.gxml
